
  Closes #2513


What's New in astroid 3.3.9?
============================
Release date: TBA

* Fix inability to import `collections.abc` in python 3.13.1. The reported fixes in astroid 3.3.6
  and 3.3.7 did not actually fix this issue.

  Closes pylint-dev/pylint#10112

* Fix crash when `sys.modules` contains lazy loader objects during checking.

  Closes #2686
  Closes pylint-dev/pylint#8589


What's New in astroid 3.3.8?
============================
Release date: 2024-12-23

* Fix inability to import `collections.abc` in python 3.13.1. The reported fixes in astroid 3.3.6
  and 3.3.7 did not actually fix this issue.

  Closes pylint-dev/pylint#10112


What's New in astroid 3.3.7?
============================
Release date: 2024-12-20

This release was yanked.

* Fix inability to import `collections.abc` in python 3.13.1. The reported fix in astroid 3.3.6
  did not actually fix this issue.

  Closes pylint-dev/pylint#10112


What's New in astroid 3.3.6?
============================
Release date: 2024-12-08

* Fix inability to import `collections.abc` in python 3.13.1.
  _It was later found that this did not resolve the linked issue. It was fixed in astroid 3.3.7_

  Closes pylint-dev/pylint#10112

* Fix crash when typing._alias() call is missing arguments.

  Closes #2513


What's New in astroid 3.3.5?
============================
Release date: 2024-10-04

* Control setting local nodes outside of the supposed local's constructor.

  Closes #1490

* Fix Python 3.13 compatibility re: `collections.abc`

  Closes pylint-dev/pylint#10000


What's New in astroid 3.3.4?
============================
Release date: 2024-09-23

* Fix regression with f-string inference.

  Closes pylint-dev/pylint#9947

* Fix bug with ``manager.clear_cache()`` not fully clearing cache.

  Refs https://github.com/pylint-dev/pylint/pull/9932#issuecomment-2364985551

* Fix a crash from inferring empty format specs.

  Closes pylint-dev/pylint#9945


What's New in astroid 3.3.3?